--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -5,9 +5,17 @@
     <i class="fas fa-key fa-6x"></i>
     <h1 class="display-3">You've Discovered some Secrets!</h1>
 
+    <!-- <% usersWithSecrets.forEach(function(user){ %>
+      <% for(var i=0 ; i<user.secrets.length ; i++){ %>
+    <p class="secret-text"><%= user.secrets[i] %></p>
+      <%}%>
+    <% }); %> -->
+
     <% usersWithSecrets.forEach(function(user){ %>
-    <p class="secret-text"><%=user.secret%></p>
-    <% }); %>
+      <% user.secrets.forEach(function(secret){ %>
+        <p class="secret-text"><%= secret %></p>
+     <% }) %>
+    <%});%>
 
     <!-- <p class="secret-text">Jack Bauer is my hero.</p> -->
     <hr />
