--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,16 +1,53 @@
 <%- include('partials/header') %>
 
+  <div id="home">
+    <div class="intro row row-cols-lg-3 text-center mb-4">
+      <div class="col-lg-6">
+        <h3><i>Live a anonymous life!</i> <span>with us.</span></h3>
+        <img src="images/2061-removebg-preview.png" alt="">
+      </div>
+      <div class="col-lg-5">
+        
+        <div class="container login bg-light my-2">
+          <i class="fas fa-key fa mt-5 mb-4"></i>
+          <h1 class="heading text-center mb-4 mt-3 d-inline">Secgram</h1>
+        
+          <div class="row">
+        
+                  <!-- Makes POST request to /login route -->
+                  <form action="/login" method="POST">
+                    <div class="form-group">
+                      <!-- <label for="email">Email</label> -->
+                      <input type="email" class="form-control my-2 mx-auto" name="username" placeholder="Email" required>
+                    </div>
+                    <div class="form-group">
+                      <!-- <label for="password">Password</label> -->
+                      <input type="password" class="form-control my-2 mx-auto" name="password" placeholder="Password" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Login</button>
+                  </form>
+                </div>
+                <hr class="mx-auto">
+                <div class="social-icon mb-3 text-center">
+                  <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
+                    <i class="fab fa-google"></i>
+                    Sign In with Google
+                  </a>
+                </div>
+            </div>
+            <div class="container login bg-light my-2">
+              <p class="my-3">Don't have an account? <a href="/register"> <strong>Register</strong></a></p>
+            </div>
+          </div>
+          
+        </div>
+        
+      </div>
+    </div>
 
-<div class="jumbotron centered">
-  <div class="container">
-    <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">Secrets</h1>
-    <p class="lead">Don't keep your secrets, share them anonymously!</p>
-    <hr>
-    <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
-    <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
+    <!-- <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
+    <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a> -->
 
   </div>
-</div>
 
 <%- include('partials/footer') %>
