--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
         <h3><i>Live a anonymous life!</i> <span>with us.</span></h3>
         <img src="images/2061-removebg-preview.png" alt="">
       </div>
-      <div class="col-lg-5">
+      <div class="col-lg-4">
         
         <div class="container login bg-light my-2">
           <i class="fas fa-key fa mt-5 mb-4"></i>
@@ -28,15 +28,15 @@
                   </form>
                 </div>
                 <hr class="mx-auto">
-                <div class="social-icon mb-3 text-center">
-                  <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
+                <div class="social-icon mb-3 text-center google">
+                  <a href="/auth/google">
                     <i class="fab fa-google"></i>
                     Sign In with Google
                   </a>
                 </div>
             </div>
             <div class="container login bg-light my-2">
-              <p class="my-3">Don't have an account? <a href="/register"> <strong>Register</strong></a></p>
+              <p class="my-3">Don't have an account? <a href="/register" style="color: blue;"> <strong>Register</strong></a></p>
             </div>
           </div>
           
