--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,8 +2,8 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
-<div id="footer" class="text-center py-1">
-    <h4>© 2021 Jainam Sogani</h4>
+<div id="footer" class="text-center pt-2">
+    <p>© 2021 Jainam Sogani</p>
 </div>
 
 </body>
