--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,41 +1,39 @@
 <%- include('partials/header') %>
-<div class="container mt-5">
-  <h1>Register</h1>
+<!-- <%- include('partials/navbar') %> -->
 
-  <div class="row">
-    <div class="col-sm-8">
-      <div class="card">
-        <div class="card-body">
+<div id="register" class="container">
 
+<div class="row mt-5">
+  <div class="col-lg-4"></div>
+  <div class="col-lg-4 register bg-light justify-content-center mt-5">
+    <div class="text-center">
+    <i class="fas fa-key fa mt-5 mb-4"></i>
+    <h1 class="heading text-center mb-4 mt-3 d-inline">Secgram</h1>
+  </div>
+  <div class="mt-2 ms-3">
+  <h4>Register</h4>
           <!-- Makes POST request to /register route -->
           <form action="/register" method="POST">
             <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" class="form-control" name="username">
+              <label for="email">Enter your Email</label>
+              <input type="email" class="form-control" name="username" placeholder="Email" required>
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password">
+              <input type="password" class="form-control mb-2" name="password" placeholder="Password" required>
             </div>
-            <button type="submit" class="btn btn-dark">Register</button>
+            <button type="submit" class="btn btn-success">Register</button>
           </form>
-
         </div>
-      </div>
-    </div>
-
-    <div class="col-sm-4">
-      <div class="card social-block">
-        <div class="card-body social-icon">
-          <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
-            <i class="fab fa-google"></i>
-            Sign Up with Google
-          </a>
+          <hr class="mx-auto">
+                <div class="social-icon mb-3 text-center google">
+                  <a href="/auth/google">
+                    <i class="fab fa-google"></i>
+                    Sign Up with Google
+                  </a>
+                </div>
         </div>
-      </div>
-    </div>
+        </div>
+        </div>
 
-  </div>
-</div>
-
-<%- include('partials/header') %>
+<%- include('partials/footer') %>
