--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -1,5 +1,7 @@
 <%- include('partials/header') %>
+<%- include('partials/navbar') %>
 
+<div id="secrets" class="mt-5 pt-5">
 <div class="jumbotron text-center">
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
@@ -20,11 +22,11 @@
     <!-- <p class="secret-text">Jack Bauer is my hero.</p> -->
     <hr />
 
-    <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
     <a class="btn btn-dark btn-lg" href="/submit" role="button"
-      >Submit a Secret</a
+      >Submit Your Secret</a
     >
   </div>
+</div>
 </div>
 
 <%- include('partials/footer') %>
