--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -1,31 +1,34 @@
 <%- include('partials/header') %>
 <%- include('partials/navbar') %>
 
-<div id="secrets" class="mt-5 pt-5">
-<div class="jumbotron text-center">
-  <div class="container">
-    <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">You've Discovered some Secrets!</h1>
-
-    <!-- <% usersWithSecrets.forEach(function(user){ %>
-      <% for(var i=0 ; i<user.secrets.length ; i++){ %>
-    <p class="secret-text"><%= user.secrets[i] %></p>
-      <%}%>
-    <% }); %> -->
-
+<div id="secrets" class="mt-5">
+  <!-- <i class="fas fa-key"></i> -->
+  <h1 class="display-5 text-center mb-5">Secrets/Confessions</h1>
+<div class="jumbotron ms-5">
+    
+    <div class="container">
+      
+    <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
     <% usersWithSecrets.forEach(function(user){ %>
       <% user.secrets.forEach(function(secret){ %>
-        <p class="secret-text"><%= secret %></p>
+          <div class="col">
+            <div class="card h-100 mx-2">
+              <div class="card-body">
+                <p class="card-text"><%= secret %></p>
+              </div>
+            </div>
+          </div>
      <% }) %>
     <%});%>
-
-    <!-- <p class="secret-text">Jack Bauer is my hero.</p> -->
-    <hr />
-
-    <a class="btn btn-dark btn-lg" href="/submit" role="button"
-      >Submit Your Secret</a
-    >
   </div>
+    <hr />
+    <h3 class="text-center">Admit your wrongdoings => <a class="btn btn-dark btn-lg" href="/submit" role="button"
+      >Submit Your Secret</a
+    ></h3>
+    
+  </div>
+    <!-- <p class="secret-text">Jack Bauer is my hero.</p> -->
+    
 </div>
 </div>
 
