--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/social.css">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link href="https://img.icons8.com/ios-glyphs/24/000000/key--v1.png" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
