Completed the project!

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Secrets</title>
+  <title>Secgram</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Chelsea+Market&family=Roboto+Slab&family=Noto+Sans&family=Encode+Sans+SC&family=Otomanopee+One&display=swap" rel="stylesheet">
